# ForgeDesk

./: .gitignore  API_IMPLEMENTATION_PLAN.md  CHANGELOG.md  Cargo.toml  PRODUCTION_BRANCH_RULES.md  PRODUCTION_PLAN.md  README.md  RELEASE_NOTES_v3.md  RELEASE_PLAN_v3.md  REPORT.md  add_print.py  build-result.json  dangling_blobs.txt  fix_init5.py  fix_print3.py  fix_print7.py  fix_print9.py  forge.toml  full-output.json  missing.md  netlify.toml  package-lock.json  package.json  pyproject.toml  release-output.txt  test_lifecycle.py  test_nuitka.py  test_rich.py  test_rust.py  test_screen.py  wrangler.toml
.ci/forge_todo/: README.md  forge.toml
.ci/forge_todo/src/: main.py
.ci/forge_todo/src/frontend/: index.html  main.js  style.css
.github/workflows/: ci.yml  publish-npm.yml  publish-python.yml  publish.yml  release-matrix.yml  signing-validation.yml
docs/: README.md  api-reference.md  architecture.md  astro.config.mjs  backend-power.md  getting-started.md  index.md  migration-from-electron.md  plugins.md  security.md
docs/.vitepress/: config.js  config.mts
docs/frontend/: astro.md  index.md
docs/src/content/docs/: index.mdx
docs/src/content/docs/blog/: docs-platform-migration.md  index.md  release-2-0-2.md
docs/src/content/docs/frontend/: angular.md  preact.md  qwik.md  react.md  solid.md  svelte.md  vue.md
docs/src/content/docs/install/: create-project.md  index.md  prerequisites.md  troubleshooting.md
examples/api_explorer/: generated_api.d.ts
examples/forge_movies/: forge.toml  package.json
examples/forge_movies/src/: config.py  main.py
examples/forge_movies/src/frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
examples/forge_movies/src/frontend/src/components/: Sidebar.astro
examples/forge_movies/src/frontend/src/layouts/: Layout.astro
examples/forge_movies/src/frontend/src/pages/: index.astro
examples/forge_movies/src/handlers/: movies.py
examples/forge_movies/src/services/: tmdb.py
examples/forge_todo/src/frontend/: forge.js
examples/hello_forge/src/: main.py
forge/: __init__.py  __main__.py  app.py  bridge.py  config.py  diagnostics.py  events.py  logging.py  plugins.py  recovery.py  scope.py  state.py  support.py  typegen.py  window.py
forge/api/: __init__.py  autostart.py  clipboard.py  deep_link.py  dialog.py  drag_drop.py  fs.py  keychain.py  lifecycle.py  menu.py  notification.py  os_integration.py  power.py  printing.py  screen.py  shell.py  shortcuts.py  system.py  tray.py  updater.py  window_state.py
forge/js/: forge.js
forge_cli/: __init__.py  bundler.py  main.py
forge_cli/templates/astro/: README.md  forge.toml  requirements.txt
forge_cli/templates/astro/src/: main.py
forge_cli/templates/astro/src/frontend/: index.html  style.css
forge_cli/templates/complex/: README.md  forge.toml
forge_cli/templates/complex/src/: config.py  main.py
forge_cli/templates/complex/src/frontend/: App.css  App.jsx  index.html
forge_cli/templates/complex/src/handlers/: __init__.py  system.py  todo.py
forge_cli/templates/complex/src/services/: system.py  todo.py
forge_cli/templates/nextjs/: .gitignore  README.md  forge.toml
forge_cli/templates/nextjs/src/frontend/: index.html  style.css
forge_cli/templates/plain/: README.md  forge.toml
forge_cli/templates/plain/src/: main.py
forge_cli/templates/plain/src/frontend/: index.html  main.js  style.css
forge_cli/templates/react/: .gitignore  README.md  forge.toml
forge_cli/templates/react/src/: main.py
forge_cli/templates/react/src/frontend/: App.css  App.jsx  index.css
forge_cli/templates/svelte/: README.md  forge.toml  requirements.txt
forge_cli/templates/svelte/src/: main.py
forge_cli/templates/svelte/src/frontend/: App.svelte  index.html  style.css
forge_cli/templates/vue/: README.md  forge.toml
forge_cli/templates/vue/src/: main.py
forge_cli/templates/vue/src/frontend/: App.vue  style.css
scripts/ci/: notarize_macos.py  prepare_release_fixture.py  sign_macos.py  sign_windows.py  smoke_installers.py  verify_macos.py  verify_windows.py
src/: events.rs  lib.rs  native_window.rs  updater.rs
src/menu/: linux.rs  mod.rs
src/platform/: assets.rs  auto_launch.rs  keychain.rs  menu.rs  mod.rs  single_instance.rs  tray.rs  vibrancy.rs
src/window/: builder.rs  mod.rs  proxy.rs
tests/: __init__.py  conftest.py  test_app.py  test_bridge.py  test_bundler.py  test_cli.py  test_config.py  test_diagnostics.py  test_drag_drop.py  test_dx_polish.py  test_error_recovery.py  test_events.py  test_events_extended.py  test_fs_api.py  test_ipc_envelope.py  test_keychain_api.py  test_logging.py  test_npm_ecosystem.py  test_npm_packages.py  test_plugins.py  test_printing.py  test_release_artifacts.py  test_scoped_permissions.py  test_security.py  test_state.py  test_state_injection.py  test_system_lifecycle_api.py  test_todo_example.py  test_tray_notification_api.py  test_typegen.py  test_version_alignment.py  test_window_extended.py  test_window_manager.py  test_window_state.py
