[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "forge.forge_core"
features = ["pyo3/extension-module"]
python-source = "."
include = ["forge/js/*.js"]

[project]
name = "forge-framework"
version = "2.0.1"
description = "Build powerful, cross-platform desktop and web applications using Python 3.14+ (NoGIL) and web technologies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Forge Team", email = "forge@example.com"}
]
keywords = [
    "desktop",
    "gui",
    "webview",
    "web-framework",
    "nogil",
    "free-threading",
    "cross-platform",
    "python-web",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Framework :: AsyncIO",
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "maturin>=1.8.0",
    "nuitka>=4.0.0",
    "uvicorn>=0.30.0",
    "msgpack>=1.0.0",
    "msgspec>=0.18.0",
    "cryptography>=44.0.0",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.11",
]
web = [
    "starlette>=0.38.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "jinja2>=3.1.0",
]

[project.scripts]
forge = "forge_cli.main:main"

[project.urls]
Homepage = "https://github.com/forge-framework/forge"
Documentation = "https://forge-framework.dev/docs"
Repository = "https://github.com/forge-framework/forge"
Issues = "https://github.com/forge-framework/forge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*", "forge_cli*"]

[tool.setuptools.package-data]
forge = ["js/*.js"]
forge_cli = ["templates/**/*.html", "templates/**/*.css", "templates/**/*.js", "templates/**/*.jsx", "templates/**/*.vue", "templates/**/*.svelte", "templates/**/*.toml"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "ASYNC", "T20"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
enable_incomplete_feature = ["NewGenericSyntax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=forge --cov-report=term-missing"
asyncio_mode = "auto"
